# hyperresearch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/roadmap-2.0/: README.md  phase-0-cleanup.md  phase-1-config-profiles.md  phase-2-source-ranking.md  phase-3-dissertation-scale.md  phase-4-chrome-lane.md  phase-5-verification.md
src/hyperresearch/: __init__.py
src/hyperresearch/cli/: __init__.py  archive.py  citecheck_cmd.py  claims_cmd.py  dedup.py  embed_cmd.py  escalation_cmd.py  fetch.py  fetch_batch.py  graph.py  install.py  levers_cmd.py  lint.py  profile_cmd.py  repair.py  run_cmd.py  search.py  setup.py  sources.py  vault_tag.py
src/hyperresearch/core/: agent_docs.py  citecheck.py  claims.py  config.py  db.py  embed.py  escalation.py  fetcher.py  graphrank.py  hooks.py  independence.py  levers.py  migrations.py  profiles.py  quality.py  render.py  runs.py  scholar.py  sync.py  vault.py
src/hyperresearch/mcp/: server.py
src/hyperresearch/models/: note.py
src/hyperresearch/search/: fts.py
src/hyperresearch/serve/: server.py
src/hyperresearch/skills/: hyperresearch-1-5-chapter-partition.md  hyperresearch-1-decompose.md  hyperresearch-10-triple-draft.md  hyperresearch-11-synthesize.md  hyperresearch-12-critics.md  hyperresearch-13-gap-fetch.md  hyperresearch-14-5-cite-check.md  hyperresearch-14-patcher.md  hyperresearch-15-polish.md  hyperresearch-16-readability-audit.md  hyperresearch-2-width-sweep.md  hyperresearch-3-contradiction-graph.md  hyperresearch-4-loci-analysis.md  hyperresearch-5-depth-investigation.md  hyperresearch-6-cross-locus-reconcile.md  hyperresearch-7-source-tensions.md  hyperresearch-8-corpus-critic.md  hyperresearch-9-evidence-digest.md  hyperresearch.md
src/hyperresearch/web/: base.py  crawl4ai_provider.py  tavily_provider.py
tests/fixtures/golden_prompts/agents/: browser_fetcher_agent.md  cite_checker_agent.md  depth_critic_agent.md  depth_investigator_agent.md  dialectic_critic_agent.md  instruction_critic_agent.md  loci_analyst_agent.md  readability_reformatter_agent.md  researcher_agent.md  width_critic_agent.md
tests/fixtures/golden_prompts/skills/: hyperresearch-10-triple-draft.md  hyperresearch-13-gap-fetch.md  hyperresearch-16-readability-audit.md  hyperresearch.md  (+4 more)
tests/test_cli/: test_archive.py  test_install_profile.py  test_lint.py  test_vault_tag.py
tests/test_core/: test_claims_and_embed.py  test_config_sections.py  test_dissertation_profile.py  test_escalation.py  test_hooks.py  test_levers.py  test_note.py  test_packaging.py  test_profiles.py  test_prompt_golden.py  test_render.py  test_runs.py  test_scholar_enrichment.py  test_source_ranking.py  test_sync.py  test_verification.py
tests/test_search/: test_fts.py
tests/test_web/: test_fetch_settings.py  test_junk_detection.py  test_tavily_provider.py
