[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperresearch"
version = "0.9.0"
description = "Claude Code harness for disciplined, adversarially-audited deep research with full provenance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [{name = "Jordan Gibbs", email = "jordan@jordangibbs.xyz"}]
keywords = ["research", "knowledge-base", "wiki", "llm", "markdown", "cli", "agent", "zettelkasten"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "platformdirs>=4.0",
    "Crawl4AI>=0.7.3",
    "pymupdf>=1.24",
    "httpx>=0.27",
]

[project.optional-dependencies]
crawl4ai = ["Crawl4AI>=0.7.3"]
mcp = ["mcp>=1.6"]
exa = ["exa-py>=2.0.0"]
tavily = ["tavily-python>=0.3"]
watch = ["watchdog>=4.0"]
all = ["hyperresearch[crawl4ai,mcp,exa,tavily,watch]"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "exa-py>=2.0.0",
    "mcp>=1.6",
    "types-PyYAML>=6.0.12",
    "watchdog>=4.0",
]

[project.scripts]
hyperresearch = "hyperresearch.cli:app"
hpr = "hyperresearch.cli:app"

[project.urls]
Homepage = "https://github.com/jordan-gibbs/hyperresearch"
Repository = "https://github.com/jordan-gibbs/hyperresearch"
Issues = "https://github.com/jordan-gibbs/hyperresearch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperresearch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
    "B008",
    "B904",
    "E402",
    "N817",
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
# Profiles/render carry deliberate en dashes (user-facing range strings and
# the dash filter); tests assert on en-dash-rendered prompt output. The
# "ambiguous unicode" warnings are false positives by construction there.
"src/hyperresearch/core/profiles.py" = ["RUF001"]
"src/hyperresearch/core/render.py" = ["RUF001", "RUF002"]
"src/hyperresearch/core/citecheck.py" = ["RUF001"]
"tests/test_core/test_render.py" = ["RUF001", "RUF002"]
"tests/test_core/test_prompt_golden.py" = ["RUF001", "RUF002"]
"tests/test_cli/test_install_profile.py" = ["RUF001", "RUF002"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
